# file-inject

./: README.md  flutter.js  index.android.bundle.js  pyproject.toml  react_native_inject.py  requirements.txt
MyProject/: App.tsx  package-lock.json  package.json
MyProject/android/: gradle.properties
MyProject/android/app/src/main/assets/: index.android.bundle
file_inject/: main.py
react_native_inject/: main.py
