[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-inject"
version = "0.3.1"

dependencies = [
    "frida==17.2.15",
    "watchdog==5.0.2",
]

description = """A simple script that pushes a file to the Android device and hooks the relevant functions with Frida to
override the application's behaviour at runtime. Designed with React Native and Flutter frameworks in mind, while trying
to be as universal as possible.
    """
authors = [
    { name = "Cezar Lungu" },
    { name = "BeDefended S.r.l." }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
keywords = ["Frida", "React Native", "index.android.bundle", "Flutter", "libflutter.so"]

[project.urls]
Repository = "https://github.com/BeDefended/file-inject"
"Blog Post" = "https://newsroom.bedefended.com/hooking-react-native-applications-with-frida/"

[project.scripts]
file-inject = "file_inject.main:main"

[tool.setuptools]
packages = ["file_inject"]
